apps/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-service
  namespace: forgejo
spec:
  type: ClusterIP
  selector:
    app: forgejo
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: https
    port: 443
    targetPort: 3000
