apps/forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    tailscale.com/hostname: git
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - git
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo-service
            port:
              number: 3000
